Fixed x overflow on landing

--- a/app/client/stylesheets/manage.css
+++ b/app/client/stylesheets/manage.css
@@ -1,10 +1,12 @@
+* {font-family: "MuseoSans";}
+
 /***********************/
 /******* NAV BAR *******/
 /***********************/
 .change-top {
 	position: fixed;
 	top: 0;
-	border-bottom: solid 1px rgba(255, 255, 255, 0.1);	
+	border-bottom: solid 1px rgba(255, 255, 255, 0.1);
 	margin: auto;
 	width: 100%;
 }
@@ -125,7 +127,7 @@
 	text-transform: uppercase;
 	padding: 10px;
 	display: block;
-	font-family: "Open Sans";
+	font-family: "Lato";
 	font-weight: 500;
 	color: white;
 }
